[package]
name = "getdoc"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.41", features = ["clock"] }
home = "0.5.11"
quote = "1.0.40"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
syn = { version = "2.0.101", features = ["full", "parsing"] }
