[package]
name = "getdoc"
version = "0.1.3"
edition = "2024"
authors = ["SauersML"]
description = "Get information related to compiler errors."
license = "MIT"
repository = "https://github.com/SauersML/getdoc"
readme = "README.md"
documentation = "https://github.com/SauersML/getdoc"

[dependencies]
chrono = { version = "0.4.41", features = ["clock"] }
clap = { version = "4.5.38", features = ["derive"] }
home = "0.5.11"
quote = "1.0.40"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
syn = { version = "2.0.101", features = ["full", "parsing"] }
toml = "0.8.22"
